--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "@editorjs/quote": "^2.5.0",
+    "aws-sdk": "^2.1510.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "firebase": "^10.7.0",
@@ -33,7 +34,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.14.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "vercel": "^32.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
